# AlexanderStein1978

./: .gitmodules  CMakeLists.txt  README.txt  TestSnapShot2.txt
ClassCluster/ClassCluster/: CMakeLists.txt  Calculation.cpp  Calculation.h  controlwindow.cpp  controlwindow.h  deltaesortfunctor.h  main.cpp  particlecontribution.cpp  particlecontribution.h  particlewatchtable.cpp  potcontrol.cpp  potcontrol.h  potstruct.h  watchpoint.cpp  watchpoint.h  window.cpp  window.h
ClassCluster/ControlWindow/: CMakeLists.txt  controlwindow.cpp  controlwindow.h  potcontrol.cpp  potcontrol.h
ClassCluster/ControlWindow/include/: controlwindow.h
ClassCluster/FitExecMain/: CMakeLists.txt  datasortfunctor.cpp  datasortfunctor.h  fitexeccontrol.cpp  fitexeccontrol.h  main.cpp
ClassCluster/Logging/: CMakeLists.txt  logfunction.cpp  logger.cpp  loglist.cpp  logmodel.cpp  logwindow.cpp
ClassCluster/Logging/include/: logfunction.h  logger.h  loglist.h  loglistitem.h  logmodel.h  logwindow.h
ClassCluster/Main/: CMakeLists.txt  main.cpp
ClassCluster/Network/: CMakeLists.txt  network.cpp  networkclient.cpp  networkserver.cpp
ClassCluster/Network/include/: network.h  networkclient.h  networkserver.h
ClassCluster/ParticleWatch/: CMakeLists.txt  particlecontribution.cpp  particlecontribution.h  particlewatchtable.cpp  particlewatchtable.h  watchpoint.cpp  watchstep.cpp  watchstep.h
ClassCluster/ParticleWatch/include/: particlewatchtable.h  watchpoint.h
ClassCluster/PotentialDefinition/: CMakeLists.txt  potentialdefiner.cpp  potentialdefinerinputdata.cpp
ClassCluster/PotentialDefinition/include/: potentialdefiner.h  potentialdefinerinputdata.h
ClassCluster/Simulation/: CMakeLists.txt  Calculation.cpp  particle.h  potstruct.cpp  random_sortfunctor.h  vector.cpp  vsortfunctor.h  window.cpp  yz_sortfunctor.h
ClassCluster/Simulation/include/: Calculation.h  particle.h  potstruct.h  vector.h  window.h
ClassCluster/test/: CMakeLists.txt  test_Calculation.cpp
ClassCluster/test/Helper/: CMakeLists.txt  CalculationTestHelper.cpp
ClassCluster/test/Helper/include/: CalculationTestHelper.h
ClassCluster/test/Tests/: CMakeLists.txt  main.cpp  test_Calculation.cpp
MolSpektAnalysis/base/MainWindow/: CMakeLists.txt  MainWindow.cpp  inputdialog.cpp  showaction.h
MolSpektAnalysis/base/MainWindow/include/: MainWindow.h  inputdialog.h
MolSpektAnalysis/base/about/: AboutMolSpektAnalysis.cbp  CMakeLists.txt  Makefile  about.cpp  about.h  cmake_install.cmake
MolSpektAnalysis/base/about/include/: about.h
MolSpektAnalysis/base/diag_window/: CMakeLists.txt  DiagWindow.cbp  DiagWindow.cpp  Picture.cpp
MolSpektAnalysis/base/diag_window/include/: DiagWindow.h  Picture.h
MolSpektAnalysis/base/fitobject/: CMakeLists.txt  fitobject.cpp  fitobject.h  gaussian.cpp  gaussianwithsaturation.cpp  lineprofile.cpp  lorentzian.cpp  lorentzian.h  lorentzianwithsaturation.cpp
MolSpektAnalysis/base/main/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  inputdialog.cpp  inputdialog.h  main.cpp  showaction.h
MolSpektAnalysis/base/mdichild/: CMakeLists.txt  MdiChild.cbp  mdichild.cpp  mdichild.h
MolSpektAnalysis/base/molecule/: CMakeLists.txt  Combobox.cpp  Molecule.cbp  Table.cpp  TableItem.cpp  TableItem.h  Transition.cpp  atom.cpp  atom.h  elstate.cpp  isotab.cpp  isotab.h  molecule.cpp  molecule.h
MolSpektAnalysis/base/molecule/include/: atom.h  (+6 more)
MolSpektAnalysis/base/tablewindow/: CMakeLists.txt  Makefile  TableWindow.cbp  cmake_install.cmake  mtable.cpp  tablewindow.cpp  tablewindow.h  tabsortfunctor.h
MolSpektAnalysis/calc/: CMakeLists.txt  fit.cpp  fit.h
MolSpektAnalysis/calc/include/: fit.h
MolSpektAnalysis/datareduction/dunham_coefficients/: CMakeLists.txt  DunhamCoefficients.cbp  Makefile  cmake_install.cmake  duntable.cpp
MolSpektAnalysis/datareduction/residualfit/: CMakeLists.txt  ConnectSpline.cpp  ConnectSpline.h  LocalPerturbation.cpp  LocalPerturbation.h  ResidualFit.cpp  ResidualFit.h  Residualfit.cbp  Spline.cpp  Spline.h  SplinePoint.h  naturalspline.cpp  naturalspline.h  point.h
MolSpektAnalysis/datasets/fcf/: CMakeLists.txt  FCF.cbp  Makefile  cmake_install.cmake  fcfjdep.cpp  fcftab.cpp  fcftab.h  fcftable.cpp  fcftable.h
MolSpektAnalysis/datasets/linetable/: .directory  CMakeLists.txt  LineTable.cbp  Makefile  cmake_install.cmake  fspdiag.cpp  fspdiag.h  linetable.cpp  linetable.h  linetablesortfunctions.cpp  questionbox.cpp  questionbox.h  sortfunctions.cpp  sortfunctions.h  tableline.h  termenergy.h  vsolistelement.h
MolSpektAnalysis/datasets/termtable/: CMakeLists.txt  Makefile  TermTable.cbp  cmake_install.cmake  cttidialog.cpp  cttidialog.h  measuredtermenergies.cpp  perturbation.h  termdata.cpp  termdata.h  termtable.cpp  termtable.h
MolSpektAnalysis/plots/dataplot/: CMakeLists.txt  DataPlot.cbp  Makefile  cmake_install.cmake  dataplot.cpp  dataplot.h  sortfuncs.cpp  sortfuncs.h
MolSpektAnalysis/plots/intensityhistogram/: CMakeLists.txt  IntensityHistogram.cbp  Makefile  cmake_install.cmake  intensityhistogram.cpp
MolSpektAnalysis/plots/potentialplot/: CMakeLists.txt  Makefile  PotentialPlot.cbp  cmake_install.cmake  potentialplot.cpp
MolSpektAnalysis/test/: CMakeLists.txt  TestSpline.pot  TestSpline2.pot  integrationtest.cpp  integrationtest.h  main.cpp  test_potential.cpp
Sound/DrawSound/: CMakeLists.txt  boxfilterdialog.cpp  boxfilterdialog.h  definesamplesizedialog.cpp  definesamplesizedialog.h  frequencywindow.cpp  frequencywindow.h  main.cpp  maxbuffer.cpp  maxbuffer.h  oscillator.cpp  oscillator.h  oscillatorarray.cpp  oscillatorarray.h  oscillatordataviewer.cpp  oscillatordataviewer.h  oscillatordiagram.cpp  oscillatordiagram.h  patternbuffer.cpp  patternbuffer.h  recordanddrawControl.cpp  recordanddrawControl.h  roundbuffer.cpp  roundbuffer.h  sounddrawwindow.cpp  sounddrawwindow.h  soundmainwindow.cpp  soundmainwindow.h  soundmatrix.cpp  soundmatrix.h  soundvector.cpp  soundvector.h  soundwindow.cpp  soundwindow.h  windowselectdialog.cpp  windowselectdialog.h
Sound/DrawSound/include/: oscillator.h  recordanddrawControl.h  soundmainwindow.h
(+438 files in other folders)
